--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 <footer>
   <div class="footer-inner">
     <span class="copyright">
-      &copy; {today.getFullYear()} Fabian Fasser. All rights reserved!
+      &copy; {today.getFullYear()} Fabian Fasser
     </span>
 
     <div class="divider-dot" aria-hidden="true"></div>
@@ -40,6 +40,7 @@ const today = new Date();
   }
 
   footer {
+    width: 100%;
     border-top: 1px solid var(--border);
     background: var(--cream);
     font-family: var(--ff-body);
