--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -13,12 +13,13 @@ const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 	<slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a {
+    display: inline-block;
+    text-decoration: none;
+  }
+  /* Active styling is handled by Header.astro */
+  a.active {
+    font-weight: inherit;
+    text-decoration: none;
+  }
 </style>
