--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,9 +47,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
         <!-- Pills / tags -->
         <div class="tags reveal" style="--delay: 0.55s">
           <span class="tag">Switzerland</span>
-          <span class="tag">Automation</span>
+          <span class="tag">Networking</span>
           <span class="tag">MBA @IE University</span>
-          <span class="tag">Ice Hockey</span>
           <span class="tag">Coffee</span>
         </div>
 
